...
                            </imageView>
                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SQa-xH-d9y">
                                <rect key="frame" x="19" y="596" width="336" height="54"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="54" id="Vlq-YY-X7x"/>
                                </constraints>
                                <state key="normal" title="Generate Map">
                                    <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                </state>
                                <connections>
                                    <action selector="generateMap:" destination="BYZ-38-t0r" eventType="touchUpInside" id="IFU-8f-zPJ"/>
                                    <segue destination="mW5-TI-7uk" kind="show" id="CDb-RW-b0Y"/>
                                </connections>
...
                        <nil key="title"/>
                        <button key="titleView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="63r-4O-VQB">
                            <rect key="frame" x="124" y="4" width="127" height="36"/>
                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
                            <state key="normal" title="Show List">
                                <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                            </state>
                            <connections>
                                <action selector="showList:" destination="mW5-TI-7uk" eventType="touchUpInside" id="7nm-M8-nPf"/>
                            </connections>
                        </button>
                        <barButtonItem key="rightBarButtonItem" title="Start" id="bRU-si-W2i">
                            <connections>
                                <action selector="findPath:" destination="mW5-TI-7uk" id="FFU-74-Nne"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
                    <connections>
...
