...
    @IBAction func findPath(_ sender: Any) {
        if usedLines.count == 0 {
            
            //Alert if no start or end button were chosen.
            if (startButton == nil || endButton == nil ){
                let alert = UIAlertController(title: "Error", message: "Please select a start and end node", preferredStyle: UIAlertControllerStyle.alert)
                alert.addAction(UIAlertAction(title: "Ok", style: UIAlertActionStyle.default, handler: nil))
                self.present(alert, animated: true, completion: nil)
                return
            }
            
            //Alert if trying to find a path between two nodes and at least one of the nodes are completely isolated.
            if (pathsOnNode[(buttonToNode[(startButton.titleLabel?.text)!]?.getName())!] == nil || pathsOnNode[(buttonToNode[(endButton.titleLabel?.text)!]?.getName())!] == nil) {
                let alert = UIAlertController(title: "Result", message: "There's no path between chosen nodes", preferredStyle: UIAlertControllerStyle.alert)
                alert.addAction(UIAlertAction(title: "Ok", style: UIAlertActionStyle.default, handler: nil))
                self.present(alert, animated: true, completion: nil)
                return
            }
            
            applyAStar()
...
